# microstructure-metrics

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_JP.md  pyproject.toml
.github/workflows/: test.yml
docs/: measurement-guide.md  signal-format-spec.md
docs/en/: measurement-guide.md  measurement-setup.md  metrics-interpretation.md  signal-format-spec.md  signal-specifications.md  user-guide.md
docs/en/metrics/: bcp.md  lfcr.md  mdi.md  mps.md  rmi.md  tfs.md  transient.md
docs/jp/: alignment.md  api-cli-reference.md  measurement-setup.md  metrics-interpretation.md  signal-specifications.md
docs/jp/metrics/: bcp.md  lfcr.md  mdi.md  mps.md  rmi.md  tfs.md  transient.md
src/microstructure_metrics/: __init__.py  cli.py  visualization.py
src/microstructure_metrics/alignment/: __init__.py  align.py  correlation.py  drift.py  pilot.py
src/microstructure_metrics/cli/: __init__.py  align.py  drift.py  generate.py  report.py
src/microstructure_metrics/filterbank/: __init__.py  gammatone.py  mel.py
src/microstructure_metrics/io/: __init__.py  audio.py  preprocess.py  validation.py
src/microstructure_metrics/metrics/: __init__.py  bass.py  binaural.py  divergence.py  mps.py  notch_psd.py  nps.py  residual.py  spectral_entropy.py  tfs.py  thd_n.py  transient.py
src/microstructure_metrics/signals/: __init__.py  generator.py
src/microstructure_metrics/testing/: __init__.py
tests/: __init__.py  expected_values.yaml  generate_test_data.py  test_alignment.py  test_bass.py  test_binaural.py  test_cli_drift.py  test_cli_report.py  test_divergence.py  test_drift.py  test_generate.py  test_io.py  test_mps.py  test_notch_psd.py  test_nps.py  test_regression.py  test_residual.py  test_spectral_entropy.py  test_tfs.py  test_thd_n.py  test_transient.py
tests/data/band_limit/: tfs_tones_4000hz_5t_48000_24bit_v1_band_limit_dut.json  tfs_tones_4000hz_5t_48000_24bit_v1_band_limit_ref.json
tests/data/edge_rounding_click/: click_bl20000hz_48000_24bit_v1_band_limit_dut.json  click_bl20000hz_48000_24bit_v1_band_limit_ref.json
tests/data/harmonic_distortion/: thd_1000hz_48000_24bit_v1_harmonic_distortion_dut.json  thd_1000hz_48000_24bit_v1_harmonic_distortion_ref.json
tests/data/modulation_composite/: modulated_1200hz_am6.0hz50_48000_24bit_v1_modulation_suppression_dut.json  modulated_1200hz_am6.0hz50_48000_24bit_v1_modulation_suppression_ref.json
tests/data/modulation_suppression/: modulated_1000hz_am4.0hz50_48000_24bit_v1_modulation_suppression_dut.json  modulated_1000hz_am4.0hz50_48000_24bit_v1_modulation_suppression_ref.json
tests/data/noise_floor/: thd_1000hz_48000_24bit_v1_noise_dut.json  thd_1000hz_48000_24bit_v1_noise_ref.json
tests/data/notch_blur/: notched_noise_8000hz_q8.6_48000_24bit_v1_notch_blur_dut.json  notched_noise_8000hz_q8.6_48000_24bit_v1_notch_blur_ref.json
(+16 files in other folders)
