[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microstructure-metrics"
version = "0.1.0"
description = "人間知覚指向DAC/AMPマイクロダイナミクス評価系"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "michihitoTakami" }
]
keywords = [
    "audio",
    "DAC",
    "amplifier",
    "measurement",
    "microdynamics",
    "THD+N",
    "audio-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "soundfile>=0.12",
    "gammatone>=1.0",
    "matplotlib>=3.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/michihitoTakami/microstructure-metrics"
Repository = "https://github.com/michihitoTakami/microstructure-metrics"
Issues = "https://github.com/michihitoTakami/microstructure-metrics/issues"

[project.scripts]
microstructure-metrics = "microstructure_metrics.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/microstructure_metrics"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["microstructure_metrics"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "gammatone.*",
    "soundfile.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.coverage.run]
source = ["src/microstructure_metrics"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == \"__main__\":",
]
